# composio.linear

./: .gitignore  pyproject.toml  requirements.txt
lineartool/: __init__.py  integrations.yml  linear_tool.py
lineartool/actions/: __init__.py  my_issues.py
lineartool/linear_client/: __init__.py  client.py  custom_fields.py  custom_mutations.py  custom_queries.py  custom_typing_fields.py  enums.py  input_types.py  my_issues.py
schemas/: query.gql  schema.gql
