[tool.poetry]
name = "composio.linear"
version = "0.1.0"
description = "Codecrew custom app for composio."
authors = ["Fernando Chucre <fernandochucre@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
ariadne-codegen = "^0.14.0"
composio-tools = "^0.0.3"

[tool.ariadne-codegen]
schema_path = "./schemas/schema.gql"
queries_path = "./schemas/query.gql"
target_package_name = "linear_client"
target_package_path = "lineartool"
enable_custom_operations=true
include_comments = "none"
async_client = false